msva-perl (0.4~pre) upstream;

  * removed dependency on monkeysphere package -- just invoke GnuPG
    directly (needs GnuPG::Interface, Regexp::Common) (closes MS #2034)
  * adds MSVA_KEYSERVER_POLICY and MSVA_KEYSERVER environment variables.
  * added a marginal UI (needs Gtk2 perl module) (closes MS #2004)
  * untaint input uids (closes MS #2270)

 -- Daniel Kahn Gillmor <dkg@fifthhorseman.net>  Sat, 02 Oct 2010 23:54:11 -0400

msva-perl (0.3) upstream;

  * packaging re-organization
  * properly closing piped monkeysphere call
  * restore default SIGCHLD handling for exec'ed subprocess (Closes: MS #2414)

 -- Daniel Kahn Gillmor <dkg@fifthhorseman.net>  Wed, 16 Jun 2010 02:29:06 -0400

msva-perl (0.2) upstream;

  * can now be invoked with a sub-command; will run until subcommand
    completes, and then terminate with the same return code (this is
    similar to the ssh-agent technique, and enables inclusion in
    Xsession.d; see monkeysphere 0.29 package for automatic startup).
  * chooses arbitrary open port by default (can still be specified with
    MSVA_PORT environment variable)
  * minimized logging spew by default.
  * now shipping README.schema (notes about possible future MSVA
    implementations)
  * cleanup Makefile and distribution strategies.

 -- Daniel Kahn Gillmor <dkg@fifthhorseman.net>  Mon, 15 Mar 2010 14:25:42 -0400

msva-perl (0.1) upstream;

   * first release.

 -- Daniel Kahn Gillmor <dkg@fifthhorseman.net>  Tue, 09 Mar 2010 00:08:54 -0500
